# flux0

./: CHANGELOG.md  Dockerfile  README.md  biome.json  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  release-package.yml  release.yml  test.yml
chat/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
chat/src/: app.tsx  index.css  main.tsx  routeTree.gen.ts
chat/src/components/: app-sidebar.tsx  code-block.tsx  icons.tsx  markdown.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  theme-provider.tsx
chat/src/components/chat/: chat-header.tsx  chat.tsx  message-actions.tsx  message-editor.tsx  message-reasoning.tsx  message.tsx  messages.tsx  multimodal-input.tsx
chat/src/components/ui/: alert-dialog.tsx  dropdown-menu.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
chat/src/hooks/: use-cookie.ts
chat/src/lib/api/: api.ts  types.ts
chat/src/routes/: __root.tsx
chat/src/routes/_chat/: _layout.tsx
chat/src/routes/_chat/_layout/: index.tsx
chat/src/routes/_chat/_layout/agent/: $agentId.tsx
chat/src/routes/_chat/_layout/session/: $sessionId.tsx
scripts/: lint.py  test.py  update_package_deps.py  utils.py
