[project]
name = "flux0"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "flux0-server",
    "flux0-cli"
]

[tool.uv.sources]
flux0-server = { workspace = true }
flux0-cli = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
flux0-server = "flux0_server.main:main"
flux0 = "flux0_cli.main:main"
